--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --heading-1: 2.5rem;
   --heading-2: 2rem;
   --heading-1-spacing: .391rem;
-  --body-text: 1.125rem
+  --body-text: 1.125rem;
   --nav-link: 1.25rem
 
 
