--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,29 @@ a {
 .footer-logo-color {
   fill: var(--primary-dark-cyan);
 }
+
+.nav {
+  color: var(--neutral-dark-grayish-blue);
+  font-weight: 700;
+  position: absolute;
+  left: 100%;
+  transform: translateX(-100%);
+  min-height: 329px;
+  width: 87vw;
+  max-width: 468px;
+  border: black 1px solid;
+  margin-top: 1.5rem;
+  justify-content: center;
+  --b: 2em; /* base */
+  --h: 1em; /* height */
+
+  --p: 100%; /* triangle position (0%:left 100%:right) */
+  
+  padding: 1em;
+  clip-path: polygon(0 0,0 100%,100% 100%,100% 0,
+    min(100%,var(--p) + var(--b)/2) 0,
+    var(--p) calc(-1*var(--h)),
+    max(0%  ,var(--p) - var(--b)/2) 0);
+    border-image: fill 0//  var(--h)
+    conic-gradient(var(--neutral-white) 0 0); 
+}
