Adjust height of image when resizing

--- a/src/App.scss
+++ b/src/App.scss
@@ -99,7 +99,8 @@
   }
   &-image > img {
     width: 100%;
-    display: block; 
+    display: block;
+    height: 100%;
   }
   &-info__wrapper {
     padding: 1.5rem; 
