--- a/src/App.scss
+++ b/src/App.scss
@@ -95,6 +95,7 @@
     border: none;
     min-height: auto;
     min-width: min-content;
+    padding: 0;
     &-wrapper {
       position: initial;
     }
@@ -107,6 +108,7 @@
     &-item {
       &__link {
         color: var(--neutral-white);
+        padding: .25rem .75rem;
         &:hover {
           color: var(--neutral-white);
           background-color: rgba(255,255,255,0.25)
