--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,9 @@
     align-self: center;
     margin-top: 2rem;
   }
+  @media (min-width: 1026px) {
+    padding-bottom: 15rem;
+  }
 }
 
 /* Navigation Styles */
@@ -68,13 +71,29 @@
     &__link {
       color: inherit;
       font-size: var(--nav-link);
-      padding: .75rem 1rem;
+      padding: 1rem 2rem;
       display: inline-block;
-      &:hover {
+      border-radius: 2.5rem;
+      display: grid;
+      grid-template-areas: 'stack';
+      justify-items: center;
+      &--hidden {
+        visibility: hidden;
+        grid-area: stack;
+      }
+      &--visible {
+        grid-area: stack;
+      }
+      &:hover,
+      &:focus {
         background-color: var(--primary-yellow);
-        border-radius: 2.5rem;
         color: var(--neutral-v-dark-blue);
-        text-transform: uppercase; 
+        .nav-item__link--hidden {
+          visibility: visible;
+        }
+        .nav-item__link--visible {
+          visibility: hidden;
+        }
       }
     } 
   }
@@ -100,7 +119,7 @@
       position: initial;
     }
     &-list {
-      gap: 2.35rem;
+      gap: 0;
       flex-direction: row;
       padding: none;
       width: auto;
@@ -108,10 +127,11 @@
     &-item {
       &__link {
         color: var(--neutral-white);
-        padding: .25rem .75rem;
-        &:hover {
+        padding: .8rem 1.6rem;
+        &:hover,
+        &:focus {
           color: var(--neutral-white);
-          background-color: rgba(255,255,255,0.25)
+          background-color: rgba(255,255,255,0.25);
         }
       }
     }
@@ -150,7 +170,7 @@
   &-blurb {
     font-weight: 700;
     color: var(--neutral-dark-grayish-blue);
-    font-size: 1.125rem; 
+    line-height: 1.67
   }
   &-learn-more__link {
     @include fraunces-bold();
@@ -215,7 +235,7 @@
     &-info__wrapper {
       gap: 1.5rem;
       text-align: left;
-      padding: 0 5rem;
+      padding: 0 7rem;
       padding-bottom: 2rem;
       align-self: center;
     }
@@ -241,7 +261,7 @@
     }
   
     &-bg-image__wrapper {
-      padding: 0  5rem 2.187rem 5rem;
+      padding: 0  7rem 2.187rem 7rem;
     }
   }
 }
@@ -286,7 +306,7 @@
       flex-direction: row;
       max-width: 1120px;
       margin: 0 auto;
-      gap: 1.5rem;
+      gap: 2.5rem;
     }
   
     &-title {
@@ -344,7 +364,7 @@
 
 @media (min-width: 1026px){
   html {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .header {
